[package]
name = "hm01b0"
authors = ["Bailey Townsend"]
version = "0.1.0"
edition = "2021"
description = "A no_std libary for the HM01B0 camera"
repository = "https://github.com/fatfingers23/HM01B0-rs"
categories = ["no-std", "embedded"]

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embassy-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
defmt = "0.3"
log = "0.4.22"
